<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/forgot_footer_tv">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/ToolBarWithNavigationBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="@android:color/transparent"
                app:title="@string/str_forgot_password_tittle" />

            <ImageView
                android:id="@+id/header_view"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:contentDescription="@null"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_forgot_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/forgot_email_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                    <EditText
                        android:id="@+id/forgot_email_et"
                        android:layout_width="match_parent"
                        android:layout_height="46dp"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/hint_email_et"
                        android:inputType="textEmailAddress"
                        android:lineSpacingExtra="5dp"
                        android:singleLine="true"
                        android:textColor="@color/md_black_1000"
                        android:textSize="@dimen/value_txt_size"
                        android:textStyle="normal" />
                </android.support.design.widget.TextInputLayout>


                <ImageButton
                    android:id="@+id/forgot_password_action_iv_btn"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:background="@drawable/ic_rounded_color_primary_shape"
                    android:clickable="true"
                    android:contentDescription="@null"
                    android:elevation="8dp"
                    android:focusable="true"
                    android:padding="12dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_arrow_forward_black_24dp"
                    android:tint="@color/md_white_1000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="8dp"
                    android:text="@string/str_or"
                    android:textSize="@dimen/header_txt_size"
                    android:textStyle="normal" />


                <TextView
                    android:id="@+id/redirect_to_login_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/str_login_account"
                    android:textColor="@color/md_grey_800"
                    android:textSize="@dimen/header_txt_size"
                    android:textStyle="normal" />


            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


    <TextView
        android:id="@+id/forgot_footer_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-condensed"
        android:gravity="end"
        android:padding="2dp"
        android:text="@string/app_name"
        android:textColor="@color/md_white_1000"
        android:textSize="@dimen/hint_txt_size" />


</RelativeLayout>