<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/transitions_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_0"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolBarWithNavigationBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_white_1000"
        app:title="Income/Expense">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@color/md_white_1000"
            android:minHeight="55dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/graph_header_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center|end"
                android:paddingEnd="@dimen/activity_margin_half"
                android:paddingStart="@dimen/activity_margin_half"
                android:text="@string/str_income"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/md_black_1000"
                android:textSize="@dimen/Main_header_txt_size" />


            <com.suke.widget.SwitchButton
                android:id="@+id/switch_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </LinearLayout>
    </android.support.v7.widget.Toolbar>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="70dp"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/actual_goals_edit_remove_layout_view"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="@dimen/activity_margin_half">

                <LinearLayout
                    android:id="@+id/goal_income_layout_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:gravity="start"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/str_goals_income"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:textColor="@color/md_grey_600"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/goal_income_value_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/_0_0"
                        android:textColor="@color/md_black_1000"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/goals_layout_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="start"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:padding="2dp"
                        android:text="@string/str_goals_expense"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:textColor="@color/md_grey_600"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/goals_expense_value_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/_0_0"
                        android:textColor="@color/md_black_1000"
                        android:textSize="16sp" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="@dimen/activity_margin_half">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:gravity="start"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/str_actual_income"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:textColor="@color/md_grey_600"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/actual_income_value_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/_0_0"
                        android:textColor="@color/md_black_1000"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/actual_layout_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="start"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:padding="2dp"
                        android:text="@string/str_actual_expense"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:textColor="@color/md_grey_600"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/actual_expense_value_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/_0_0"
                        android:textColor="@color/md_black_1000"
                        android:textSize="16sp" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/actual_goals_edit_remove_layout_view"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/month_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="2dp"
                android:text="@string/str_goals_income"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/md_grey_600"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/year_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_margin_half"
                android:contentDescription="@null"
                android:drawableEnd="@drawable/ic_date_range"
                android:drawablePadding="2dp"
                android:gravity="center"
                android:minWidth="60dp"
                android:padding="2dp"
                android:text="2018"
                android:textColor="@color/md_black_1000"
                android:textSize="16sp"
                android:textStyle="normal" />


        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/ic_shadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/over_all_income_expense_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            tools:listitem="@layout/list_item_over_all_income_expense" />

        <TextView
            android:id="@+id/no_data_available_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableTop="@drawable/ic_bubble_background"
            android:gravity="center"
            android:text="@string/no_data_available"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="#827f93"
            android:textStyle="normal"
            android:visibility="gone" />

    </LinearLayout>


</LinearLayout>